--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Karanl-k-Vr-Oyunu.sln"
+    "dotnet.defaultSolution": "Karanlık Vr Oyunu.sln"
 }
